[gd_scene load_steps=29 format=3 uid="uid://cduydrdm25whw"]

[ext_resource type="Script" path="res://prizes/coin.gd" id="1_suwwi"]
[ext_resource type="Texture2D" uid="uid://nmkoex7trpbp" path="res://assets/newnewassets/coin.png" id="2_h2jix"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="3_bo2fm"]
[ext_resource type="Texture2D" uid="uid://dnb4wtjyqcdmh" path="res://assets/c6d59c30-b7f1-47f6-b27a-c8b25e606921.png" id="3_u2q3d"]
[ext_resource type="Script" path="res://components/move_component.gd" id="4_cilwo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wmry6"]
atlas = ExtResource("2_h2jix")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ffqo"]
atlas = ExtResource("2_h2jix")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ain"]
atlas = ExtResource("2_h2jix")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6fu3"]
atlas = ExtResource("2_h2jix")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu35i"]
atlas = ExtResource("2_h2jix")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5btwg"]
atlas = ExtResource("2_h2jix")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1txo"]
atlas = ExtResource("2_h2jix")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhemd"]
atlas = ExtResource("2_h2jix")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyrv3"]
atlas = ExtResource("2_h2jix")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qxp6"]
atlas = ExtResource("2_h2jix")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4itra"]
atlas = ExtResource("2_h2jix")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd7jq"]
atlas = ExtResource("2_h2jix")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbvkj"]
atlas = ExtResource("3_u2q3d")
region = Rect2(5, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejkh5"]
atlas = ExtResource("3_u2q3d")
region = Rect2(124, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkmbo"]
atlas = ExtResource("3_u2q3d")
region = Rect2(243, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm1sl"]
atlas = ExtResource("3_u2q3d")
region = Rect2(362, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2ye0"]
atlas = ExtResource("3_u2q3d")
region = Rect2(481, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtik2"]
atlas = ExtResource("3_u2q3d")
region = Rect2(600, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0angi"]
atlas = ExtResource("3_u2q3d")
region = Rect2(719, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bs0l"]
atlas = ExtResource("3_u2q3d")
region = Rect2(838, 230, 119, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lvjp"]
atlas = ExtResource("3_u2q3d")
region = Rect2(957, 230, 119, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxdpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmry6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ffqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ain")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6fu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu35i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5btwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1txo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhemd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyrv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qxp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4itra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd7jq")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbvkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejkh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkmbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm1sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2ye0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtik2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0angi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bs0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lvjp")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycfb2"]
radius = 100.757

[node name="Coin" type="Node2D"]
script = ExtResource("1_suwwi")

[node name="Coin" type="Area2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Coin"]
position = Vector2(1.19209e-07, -5.96046e-08)
scale = Vector2(0.142252, 0.115)
sprite_frames = SubResource("SpriteFrames_xxdpr")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.0872656

[node name="CollisionShape2D" type="CollisionShape2D" parent="Coin"]
scale = Vector2(0.0703125, 0.0644531)
shape = SubResource("CircleShape2D_ycfb2")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("3_bo2fm")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_cilwo")
actor = NodePath("..")
velocity = Vector2(0, 40)

[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
